# AmrSwiftAndroid

./: .gitignore  README.md
AddSwift/: Add.swift  build  reload
AddSwift/lib/: reload
AddSwiftApp/: .gitignore  README.md
AddSwiftApp/app/: build.gradle  build.sh
AddSwiftApp/app/src/main/: AndroidManifest.xml
AddSwiftApp/app/src/main/cpp/: CMakeLists-c.txt  CMakeLists.txt  add-swift.c  add-swift.cpp
AddSwiftApp/app/src/main/java/com/example/addswift/: MainActivity.java
AddSwiftApp/app/src/main/res/layout/: activity_main.xml
AddSwiftApp/app/src/main/res/values/: strings.xml
AddSwiftApp/distribution/AddSwift/: build
AddSwiftApp/distribution/AddSwift/lib/: reload
AddSwiftApp/distribution/gaddswift/: reload
AddSwiftApp/gen-libs/src/main/cpp/: CMakeCache.txt  Makefile  cmake_install.cmake
AddSwiftApp/gradle/wrapper/: gradle-wrapper.properties
AddSwiftApp/libs/: reload
AddSwiftLib/: build
AddSwiftLib/output/: reload
HelloAndroid/: README.md  build  hello.swift  reload  run
HelloAndroid/libs/: reload
